--- a/public/css/sass/main.sass
+++ b/public/css/sass/main.sass
@@ -10,6 +10,7 @@ img
     width: 100%
     height: auto
 
+
 .container
     margin-top: 20px
 
@@ -123,10 +124,12 @@ img
     bottom: 0
     height: 50px
     width: 630px
+    font-family: 'mermaid'
+
 
 #jobsText h1
     font-size: 50px
-    color: #D7F171
+    color: #08ff00
     -webkit-text-stroke: 1px
     -webkit-text-stroke-color: black
 
@@ -138,6 +141,9 @@ img
 
 #shopButton
     border-radius: 5px 0px 0px 5px
+
+#jared
+    height: auto
 
 // Fonts
 @font-face
