Update User to also sort by ID and update contact seller button with email functionality

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -105,6 +105,10 @@ img {
   text-align: center;
   line-height: 15px; }
 
+.sidenote {
+  color: gray;
+  font-size: 11px; }
+
 .centerText {
   text-align: center; }
 
