--- a/public/css/sass/main.sass
+++ b/public/css/sass/main.sass
@@ -113,11 +113,15 @@ img
     text-align: center
     line-height: 15px
 
+.sidenote
+    color: gray
+    font-size: 11px
+
 .centerText
     text-align: center
 
-    
-#jobsText 
+
+#jobsText
     position: absolute
     margin: 390px auto
     top: 0
@@ -167,5 +171,3 @@ img
 @font-face
     font-family: 'ralewayThin'
     src: url(../fonts/Raleway-Thin.ttf)
-
-
