--- a/public/css/sass/main.sass
+++ b/public/css/sass/main.sass
@@ -92,7 +92,7 @@ img
     margin-bottom: 10px
 
 .searchbar
-    width: 35em !important
+    width: 34em !important
     margin-right: 0 !important
     border-radius: 5px 0px 0px 5px
     border-right: 0 transparent
@@ -103,6 +103,9 @@ img
 
 .topMargin
     margin-top: 20px
+
+.botPadding
+    padding-bottom: 40px
 
 .footer
     position: absolute
@@ -150,6 +153,29 @@ img
 
 #jared
     height: auto
+
+#signupCover
+    width: 100%
+    height: 450px
+    background: url(../img/signup.gif) top center
+    background-repeat: no-repeat
+    background-size: cover
+    position: relative
+
+#joinUs
+    color: white
+    font-size: 60px
+
+#joinUsDiv
+    width: 190px
+    height: 56px
+    position: absolute
+    margin: auto
+    top: 0
+    bottom: 0
+    left: 0
+    right: 0
+
 
 // Fonts
 @font-face
