--- a/public/css/sass/main.sass
+++ b/public/css/sass/main.sass
@@ -10,6 +10,12 @@ img
     width: 100%
     height: auto
 
+h1, h2, h3
+    font-family: 'ralewayBold'
+
+p
+    font-family: 'ralewayRegular'
+
 
 .container
     margin-top: 20px
@@ -123,7 +129,6 @@ img
 .centerText
     text-align: center
 
-
 #jobsText
     position: absolute
     margin: 390px auto
@@ -133,7 +138,6 @@ img
     bottom: 0
     height: 50px
     width: 630px
-    font-family: 'mermaid'
 
 
 #jobsText h1
@@ -141,6 +145,7 @@ img
     color: #08ff00
     -webkit-text-stroke: 1px
     -webkit-text-stroke-color: black
+    font-family: 'mermaid'
 
 #searchButton
     border-radius: 0px 5px 5px 0px
